fix:background logic and web interface repair
