# models/models.go
@@ -7,7 +7,27 @@ import (
 
 var O orm.Ormer
 
+type urlConfig struct {
+	Domian      string
+	Signin      string
+	Signup      string
+	CreateUser  string
+	DeleteImage string
+	Logout      string
+	ViewImage   string
+}
+
+var URL urlConfig
+
 func init() {
+	URL.Domian = "http://127.0.0.1:7070"
+	URL.Signin = "/v1/user/login"
+	URL.Signup = "/v1/user/signup"
+	URL.CreateUser = "/v1/user"
+	URL.DeleteImage = "/v1/image"
+	URL.Logout = "/v1/user/logout"
+	URL.ViewImage = "/v1/image/view"
+
 	orm.Debug = true
 	orm.RegisterDriver("mysql", orm.DRMySQL)
 	orm.RegisterModel(new(User), new(Image))
